Fixed issue with image ref by adding another . onto existing one

--- a/recipes/avotoast.html
+++ b/recipes/avotoast.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Avocado Toast</h1>
-		<img src="./Images/avo.jpg" width="600" height="500">
+		<img src="../Images/avo.jpg" width="600" height="500">
 		<h3><em>Is avocado a fruit or a veggie ?</em></h3>
 		<p>Enjoy this delicious toast !!</p>
 		<hr>
@@ -23,6 +23,6 @@
 			<li>Mix together avocado and garlic salt in a small bowl; spread onto bread slices.</li>
 			<li>Lay tomato slices over avocado and season with black pepper</li>
 		</ol>
-		<a href="./index.html">Back to recipes</a>
+		<a href="../index.html">Back to recipes</a>
 	</body>
 </html>
