--- a/recipes/greensalad.html
+++ b/recipes/greensalad.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<h1>Green Salad</h1>
-		<img src="./Images/green salad.jpg">
+		<img src="../Images/green salad.jpg">
 		<h3><em>Healthy af, fit fam, new body whozdis?</em></h3>
 		<P>This green salad is great for a side dish or meal on its own. I make it for my wife and she always enjoys it.</p>
 		<hr>
@@ -29,7 +29,7 @@
 			<li>Combine onion, pepper, salad greens, chicken and tomato in large bowl. Sprinkle with onion powder, garlic powder, salt and black pepper; toss well to mix</li>
 			<li>Pour salad dressing; toss well and serve</li>
 		</ol>
-		<a href="./index.html">Back to recipes<a/>
+		<a href="../index.html">Back to recipes<a/>
 	</body>
 </html>
 
