--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Smoothie</h1>
-		<img src="./images/smoothie.jpg" width="600">
+		<img src="../images/smoothie.jpg" width="600">
 		<h3><em>All in one fruit blend?</em></h3>
 		<p>This recipe is super versatile and you can change it depending on your dietary needs or personal preference. Have fun !!</p>
 		<hr>
@@ -24,6 +24,6 @@
 			<li>Increase speed to high and blend until smooth, about 2 minutes.</li>
 			<li>Add ice and blend on high until smooth, about a minute more.</li>
 		</ol>
-		<a href="./index.html">Back to recipes</a>
+		<a href="../index.html">Back to recipes</a>
 	</body>
 </html>
