Added Css as a second task to make the page look better

--- a/recipes/avotoast.html
+++ b/recipes/avotoast.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Avocado Toast</title>
-	</head>
-	<body>
-		<h1>Avocado Toast</h1>
-		<img src="../Images/avo.jpg" width="600" height="500">
-		<h3><em>Is avocado a fruit or a veggie ?</em></h3>
-		<p>Enjoy this delicious toast !!</p>
-		<hr>
-		<h4>Ingredients</h4>
-		<ul>
-			<li>1 whole avocado - peeled, pitted and smashed</li>
-			<li>1 teaspoon salt</li>
-			<li>2 slices ciabatta bread or any brown bread</li>
-			<li>6 slices tomato</li>
-			<li>1 pinch ground black paper to taste</li>
-		</ul>
-		<h4>Directions</h4>
-		<ol>
-			<li>Mix together avocado and garlic salt in a small bowl; spread onto bread slices.</li>
-			<li>Lay tomato slices over avocado and season with black pepper</li>
-		</ol>
-		<a href="../index.html">Back to recipes</a>
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>
+            Avocado Toast
+        </title>
+        <link rel="stylesheet" href="../style.css">
+    </head>
+    <body>
+        <h1>Avocado Toast</h1>
+        <img class="avo" src="../Images/avo.jpg" alt="A beautiful Avocado toast" width="600" height="500">
+        <h3><em>Is Avocado a veggie or fruit?</em></h3>
+        <p>Enjoy this delicious toast as a snack or a meal.</p>
+        <hr>
+        <h4 class="recipe">Ingredients</h4>
+        <ul>
+            <li>1 whole avocado - peeled, pitted, and mashed</li>
+            <li>1 teaspoon salt</li>
+            <li>2 slices ciabatta bread or any brown bread of your choice</li>
+            <li>6 slices tomato</li>
+            <li>1 pinch ground black pepper to taste</li>
+        </ul>
+        <h4 class="method">Directions</h4>
+        <ol>
+            <li>Mix together avocado and garlic salt in a small bowl; spread onto bread slices.</li>
+            <li>Lay tomatoe slices over avocado on the bread and season with black pepper.</li>
+        </ol>
+        <a class="link-back" href="../index.html"><button id="button">Back to home</button</a>
+    </body>
 </html>
