--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Smoothie</title>
-	</head>
-	<body>
-		<h1>Smoothie</h1>
-		<img src="../images/smoothie.jpg" width="600">
-		<h3><em>All in one fruit blend?</em></h3>
-		<p>This recipe is super versatile and you can change it depending on your dietary needs or personal preference. Have fun !!</p>
-		<hr>
-		<h4>Ingredients</h4>
-		<ul>
-			<li>1 cup fresh/frozen blueberries</li>
-			<li>1/2 cup Greek Yogurt</li>
-			<li>1/4 cup orange juice</li>
-			<li>1/2 cup strawberries</li>
-			<li>3 ice cubes</li>
-		</ul>
-		<h4>Directions</h4>
-		<ol>
-			<li>Blend blueberries, yogurt, orange juice and strawberries together ina blender on low speed for 30 seconds</li> 
-			<li>Increase speed to high and blend until smooth, about 2 minutes.</li>
-			<li>Add ice and blend on high until smooth, about a minute more.</li>
-		</ol>
-		<a href="../index.html">Back to recipes</a>
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>
+            Smoothie
+        </title>
+        <link rel="stylesheet" href="../style.css">
+    </head>
+    <body>
+        <h1>Smoothie</h1>
+        <img class="smoothie" src="../Images/smoothie.jpg" alt="A lovely sight of a smoothie">
+        <h3>All in one fruit blend ?</h3>
+        <p>This recipe is super versatile, and you can change it depending on dietary needs or personal preference. Have fun with it!</p>
+        <hr>
+        <h4 class="recipe">Ingredients</h4>
+        <ul>
+            <li>1 cup fresh blueberries</li>
+            <li>½ cup Greek yogurt</li>
+            <li>¼ cup orange juice</li>
+            <li>½ cup strawberries</li>
+            <li>3 ice cubes</li>
+        </ul>
+        <h4 class="method">Directions</h4>
+        <ol>
+            <li>Blend blueberries, yogurt, orange juice and strawberries together in a blender on low speed for 30 seconds</li>
+            <li>Increase speed to high and blend until smooth, about 2 minutes.</li>
+            <li> Add ice and blend on high until smooth, about 1 minute more.</li>
+        </ol>
+        <a class="link-back" href="../index.html"><button id="button">Back to home</button></a>
+    </body>
 </html>
