--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>My Recipes</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
-		<img src="./Images/chef.jpg" width"600" height="450">
+		<img src="../Images/chef.jpg" width"600" height="450">
 		<hr>
 		<ul>
 			<li><a href="recipes/greensalad.html">Green Salad</a></li>
