--- a/recipes/greensalad.html
+++ b/recipes/greensalad.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>
-			Green Salad Recipe
-		</title>
-	</head>
-	<body>
-		<h1>Green Salad</h1>
-		<img src="../Images/green salad.jpg">
-		<h3><em>Healthy af, fit fam, new body whozdis?</em></h3>
-		<P>This green salad is great for a side dish or meal on its own. I make it for my wife and she always enjoys it.</p>
-		<hr>
-		<ul>
-			<li>1/2 cup red onion</li>
-			<li>1/2 cup chopped green bell pepper</li>
-			<li>2 (250g) mixed salad greens</li>
-			<li> 4 thinly sliced chicken deli meat, chopped</li>
-			<li>1 tomato, chopped</li>
-			<li>1/4 teaspoon onion powder</li>
-			<li>3 dashes garlic powder</li>
-			<li>2 pinches salt and ground black pepper to taste</li>
-			<li>3 tablespoons balsamic vinaigrette salad dressing</li>
-		</ul>
-		<h4>Direcrions</h4>
-		<ol>
-			<li>Saute onion and bell pepper in a pan until soft, about 3 minutes. Set aside to cool</li>
-			<li>Combine onion, pepper, salad greens, chicken and tomato in large bowl. Sprinkle with onion powder, garlic powder, salt and black pepper; toss well to mix</li>
-			<li>Pour salad dressing; toss well and serve</li>
-		</ol>
-		<a href="../index.html">Back to recipes<a/>
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>
+            Green Salad recipe
+        </title>
+        <link rel="stylesheet" href="../style.css">
+    </head>
+    <body>
+        <h1>
+            Green Salad
+        </h1>
+        <img class="salad" src="../Images/green salad.jpg" alt="An image of Green salad">
+        <h3><em>Healthy af, fit fam, new body whozdis ?</em></h3>
+        <p>This green salad is good for a side dish or a meal on its own. I make it often for my wife and she always enjoys it.</p>
+        <hr>
+        <h4 class="recipe">Ingredients</h4>
+        <ul>
+            <li>½ cup chopped red onion</li>
+            <li>½ cup chopped green bell pepper</li>
+            <li>2 (250g) packages mixed salad greens</li>
+            <li>4 thinly sliced chicken deli meat, chopped</li>
+            <li>1 tomato, chopped</li>
+            <li>¼ teaspoon onion powder</li>
+            <li>3 dashes garlic powder</li>
+            <li>2 pinches salt and ground black pepper to taste</li>
+            <li>3 tablespoons balsamic vinaigrette salad dressing</li>
+        </ul>
+        <h4 class="method">Directions</h4>
+        <ol>
+            <li>Place onion and bell pepper in a microwave-safe bowl; heat in microwave on high until soft, about 1 to 2 minutes. Set aside to cool.</li>
+            <li>Combine onion, bell pepper, salad greens, deli meat, and tomato in a large salad bowl. Sprinkle with onion powder, garlic powder, salt, and black pepper; toss well to mix</li>
+            <li>Pour on salad dressing; toss well and serve.</li>
+        </ol>
+        <a class="link-back" href="../index.html"><button id="button">Back to home</button></a>
+    </body>
 </html>
-
