--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<h1>Odin Recipes</h1>
-		<img src="../Images/chef.jpg" width"600" height="450">
+		<img src="./Images/chef.jpg" width"600" height="450">
 		<hr>
 		<ul>
 			<li><a href="recipes/greensalad.html">Green Salad</a></li>
